# archive-list

./: AGENTS.md  Cargo.toml  README.md  REVIEW-early.md  happening.md
.beads/: issues.jsonl
doc/: EXPLORE-draft-httpapi-ratelimit-headers.md  FEATURE-adaptive.md  PLAN-httpapi.md  PLAN-httpapi.opus.md  PROMPT-ratepool.md
doc/adr/: 0001-providers-and-rate-limits.md  0002-generic-provider-with-strategy-pattern.md
src/: cli.rs  config.rs  failure.rs  main.rs
src/commands/: mod.rs  readme_get.rs
src/provider/: codeberg.rs  domain.rs  factory.rs  generic.rs  github.rs  gitlab.rs  huggingface.rs  mod.rs  strategy.rs
src/tests/: integration.rs  mod.rs  ratelimit.rs
src/util/: client.rs  mod.rs  provider_selector.rs  ratelimit.rs  ratelimit_headers.rs  reader.rs  token.rs
