[package]
name = "archive-list"
version = "0.1.0"
edition = "2021"
description = "CLI tool to download README files from repositories listed in an archlist"
license = "MIT"
repository = "https://github.com/rektide/archive-list"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
directories = "5.0"
governor = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.39", features = ["full"] }
config = "0.14"

[dev-dependencies]
