[package]
name = "archive-list"
version = "0.1.0"
edition = "2021"
description = "CLI tool to download README files from repositories listed in an archlist"
license = "MIT"
repository = "https://github.com/rektide/archive-list"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
config = "0.14"
directories = "5.0"
governor = "0.6"
nonzero_ext = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39", features = ["full"] }
toml = "0.8"
urlencoding = "2.1"

[dev-dependencies]
